--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,8 @@
     android:id="@+id/layout_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_title_bg">
+    android:background="@color/color_title_bg"
+    >
 
 
     <LinearLayout
