--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,8 @@
                 android:id="@+id/home_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:contentInsetStart="0dp">
+                app:contentInsetStart="0dp"
+                android:fitsSystemWindows="true">
 
                 <RelativeLayout
                     android:id="@+id/rel_toolbar"
