--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,13 +43,13 @@
 
             </com.iwenchaos.koteye.widget.MultipleStatusView>
 
-
+            <!--fitSystemWindow 适配系统的status bar，使得action bar位于status bar下方-->
             <android.support.v7.widget.Toolbar
                 android:id="@+id/home_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:contentInsetStart="0dp"
-                android:fitsSystemWindows="true">
+                android:fitsSystemWindows="true"
+                app:contentInsetStart="0dp">
 
                 <RelativeLayout
                     android:id="@+id/rel_toolbar"
