--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="bottom_tab_height">50dp</dimen>
     <dimen name="padding_bottom">50dp</dimen>
+    <dimen name="actionBarHeight">80dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="padding_tab_layout_bottom">51dp</dimen>
