--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,6 +85,12 @@
 
         </FrameLayout>
 
+
+        <com.scwang.smartrefresh.layout.footer.ballpulse.BallPulseView
+            android:id="@+id/home_refresh_footer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
