--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
     <dimen name="bottom_tab_height">50dp</dimen>
     <dimen name="padding_bottom">50dp</dimen>
-    <dimen name="actionBarHeight">80dp</dimen>
+    <dimen name="actionBarHeight">60dp</dimen>
+    <dimen name="tabBarHeight">40dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="padding_tab_layout_bottom">51dp</dimen>
@@ -20,4 +21,5 @@
     <dimen name="textSize_title">18sp</dimen>
 
     <dimen name="division_line">0.5dp</dimen>
+    <dimen name="tabIndicatorHeight">2dp</dimen>
 </resources>
