视频播放详情的部分完成

--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -28,10 +28,8 @@
 
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/vdVideoPlayer"
-            android:background="@color/color_light_black" />
+            style="@style/DividerLine"
+            android:layout_below="@id/vdVideoPlayer" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/vdRecyclerView"
