增加观看记录跳转逻辑

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -200,7 +200,8 @@
                     android:layout_height="50dp"
                     android:gravity="center|center_horizontal"
                     android:text="@string/view_history"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:onClick="toHistory"/>
 
                 <TextView
                     android:id="@+id/tv_feedback"
